# arxiv-plugin

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  nightly-oras.yml  nightly.yml  release-oras.yml  release.yml
src/: lib.rs  types.rs
src/pdk/: http.rs
tests/fixtures/: electron.xml  error.xml  multi_doi.xml  rust.xml  rust_lastupdated.xml
