[package]
name = "arxiv"
version = "0.1.1"
edition = "2024"

[lib]
name = "plugin"
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4"
git-version = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
feed-rs = "1.5"
urlencoding = "2.1"
base64 = "0.21"
base64-serde = "0.8"

[package.metadata.release]
publish = false
push = true
tag = true
tag-name = "v{{version}}"
